# api/swagger/swagger.yaml
@@ -53,18 +53,45 @@ paths:
       description: Returns a list of restaurants
       # used as the method name of the controller
       operationId: getRestaurants
+      responses:
+        200:
+          description: Success
+          schema:
+            type: object
+            required:
+              - entities
+            properties:
+              entities:
+                type: array
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /restaurants/{id}/reviews:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: restaurants
+    x-a127-apply: {}
+    get:
+      description: Returns a list of reviews for a specific restaurant
+      # used as the method name of the controller
+      operationId: getReviews
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+        - name: id
+          in: path
+          description: The restID of the restaurant
+          required: true
+          type: number
       responses:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            type: object
+            required:
+              - entities
+            properties:
+              entities:
+                type: array
         # responses may fall through to errors
         default:
           description: Error
